# xrlinux

./: .gitignore  Jinxfile  README.md
bootloader/: CMakeLists.txt  PROTOCOL.md  asm.h  compiler.h  config.c  config.h  dt.c  dt.h  filesystem.c  filesystem.h  intrinsics.c  list.h  logging.c  logging.h  main.c  main.h  memory.c  memory.h  paging.c  paging.h  partition.c  partition.h  platform.h  transition.S  transition.h
bootloader/a4x/: CMakeLists.txt  a4x.c  a4x.h  a4x.lds  main.S  main.c  platformdefs.h
build-support/: cmake-toolchain-xr17032.txt
build-support/bash/: bash.bashrc
host-recipes/: autoconf  autoconf-2.69  automake  binutils  gcc  gcc-bootstrap  install-apt  libtool  pkg-config
install-apt/: CMakeLists.txt  install-apt.c
patches/autoconf/: jinx-working-patch.patch
patches/binutils/: jinx-working-patch.patch
patches/gcc/: jinx-working-patch.patch
patches/glibc/: jinx-working-patch.patch
patches/linux/: jinx-working-patch.patch
recipes/: base  base-files  bash  bootloader  core-libs  coreutils  glibc  init  linux  linux-headers  ncurses  readline
source-recipes/: autoconf  autoconf-2.69  automake  binutils  gcc  install-apt  libtool  pkg-config
